--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 }
 
 .header__menu {
-    margin-right: 32px;
+    margin-right: 36px;
     display: flex;
     align-items: center;
 }
@@ -16,11 +16,18 @@
 .header__links-list {
     display: flex;
     justify-content: space-between;
+    gap: 32px;
 }
 
 .header__links-list-item {
     list-style: circle;
-    margin: 0 13px;
+    letter-spacing: 0.01em;
+    line-height: 21.13px;
+    border-bottom: 1px solid #000;
+}
+
+.header__link-list-item_active {
+    border-bottom: none;
 }
 
 .header__links-list-item_no-bullit {
@@ -28,33 +35,35 @@
     margin-left: 0;
 }
 
-.header__link_active {
+.header__link {
     text-decoration: none;
 }
 
 .header__logo {
-    margin-right: 180px;
+    margin-right: 184px;
     display: block;
     width: 148px;
 }
 
 .header__logo-image {
-    height: 100%;
+    height: 105px;
 }
 
 .header__address {
     all: unset;
-    max-width: 240px;
+    max-width: 236px;
     color: #000;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 24.3px; /* 135% */
+    margin: 5px 0 2px;
 }
 
-.header__address-phone {
+.header__address-contact {
     text-decoration: none;
     border-bottom: 1px solid;
+    letter-spacing: 0.01em;
 }
 
 /* Cover */
